[tool.poetry]
name = "phase"
version = "0.1.0"
description = ""
authors = ["Sarkoxed <sarkoxed2013@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scipy = "^1.11.4"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
